--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,6 +15,11 @@ body {
   display: flex;
   justify-content: space-between;
 }
+.card {
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05);
+  padding: 10px;
+  flex-basis: 35%;
+}
 .card_text {
   text-align: center;
   margin-top: 25px;
@@ -37,12 +42,23 @@ body {
   border: 1px solid #52c3c9;
   padding: 23px 75px;
   background: #f9f9f9;
-  transition: all 0.5s;
+  transition: all 1s;
 }
 .button:hover {
-  font-size: 18px;
   color: #000;
   background: #fff;
-  border: 2px solid #000;
-  transition: all 0.5s;
+  border: 1px solid #000;
+  transition: all 1s;
+}
+@media (max-width: 578px) {
+  .container {
+    width: 90%;
+    flex-wrap: wrap;
+  }
+  .card {
+    flex-basis: 80%;
+  }
+  .card_img {
+    width: 100%;
+  }
 }
